# telephony_call_manager

./: BUILD.gn  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_UPDATE.md  OAT.xml  README.md  README_zh.md  bundle.json  call_manager_aafwk.gni  callmanager.gni  hisysevent.yaml  ohos.build
frameworks/cj/: BUILD.gn
frameworks/cj/src/: telephony_call_ffi.cpp  telephony_call_ffi.h  telephony_call_impl.cpp  telephony_call_impl.h  telephony_call_log.h  telephony_call_mock.cpp  telephony_call_utils.h
frameworks/ets/taihe/: BUILD.gn
frameworks/js/: BUILD.gn
frameworks/native/: BUILD.gn  tel_call_manager_api.versionscript
frameworks/native/include/: bluetooth_call_proxy.h  call_ability_callback.h  call_ability_callback_stub.h  call_manager_proxy.h  call_manager_service_ipc_interface_code.h  call_manager_service_proxy.h  i_bluetooth_call.h  i_call_ability_callback.h  i_call_manager_service.h  native_call_manager_hisysevent.h  native_call_manager_utils.h
frameworks/native/src/: bluetooth_call_client.cpp  bluetooth_call_proxy.cpp  call_ability_callback.cpp  call_ability_callback_stub.cpp  call_manager_client.cpp  call_manager_proxy.cpp  call_manager_service_proxy.cpp  call_status_callback_proxy.cpp  cellular_call_proxy.cpp  native_call_manager_hisysevent.cpp  native_call_manager_utils.cpp  nearlink_call_client.cpp  super_privacy_manager_client.cpp  super_privacy_manager_proxy.cpp  voip_call_manager_proxy.cpp
interfaces/kits/: BUILD.gn
interfaces/kits/include/: call_manager.h  kit_call_manager_hilog_wrapper.h
interfaces/kits/js/: @ohos.telephony.call.d.ts
interfaces/kits/src/: call_manager.cpp
resource/audio/: BUILD.gn
services/deps_adapter/: BUILD.gn
services/deps_adapter/adapter_type/: adapter_type.h
services/deps_adapter/include/: common_deps_adapter.h  incoming_flash_reminder_adapter.h  sms_adapter.h
services/deps_adapter/src/: common_deps_adapter.cpp  incoming_flash_reminder_adapter.cpp  sms_adapter.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/audiodevice_fuzzer/: BUILD.gn  audiodevice_fuzzer.cpp  audiodevice_fuzzer.h
test/fuzztest/bluetoothdialcall_fuzzer/: BUILD.gn  bluetoothdialcall_fuzzer.cpp  bluetoothdialcall_fuzzer.h
test/fuzztest/call_fuzzer/: BUILD.gn  call_fuzzer.cpp  call_fuzzer.h
test/fuzztest/callabilitycallback_fuzzer/: BUILD.gn  callabilitycallback_fuzzer.cpp  callabilitycallback_fuzzer.h
test/fuzztest/callmanagerservicestub_fuzzer/: BUILD.gn  callmanagerservicestub_fuzzer.cpp  callmanagerservicestub_fuzzer.h
test/fuzztest/callnotification_fuzzer/: BUILD.gn  callnotification_fuzzer.cpp  callnotification_fuzzer.h
test/fuzztest/callvoiceassistantmanager_fuzzer/: BUILD.gn  callvoiceassistantmanager_fuzzer.cpp  callvoiceassistantmanager_fuzzer.h
test/fuzztest/common_fuzzer/: addcalltoken_fuzzer.cpp  addcalltoken_fuzzer.h
test/fuzztest/controlcamera_fuzzer/: BUILD.gn  controlcamera_fuzzer.cpp  controlcamera_fuzzer.h
test/fuzztest/dialcall_fuzzer/: BUILD.gn  dialcall_fuzzer.cpp  dialcall_fuzzer.h
test/fuzztest/display_fuzzer/: BUILD.gn  display_fuzzer.cpp  display_fuzzer.h
test/fuzztest/distributedcommunication_fuzzer/: BUILD.gn  distributed_communication_fuzzer.cpp  distributed_communication_fuzzer.h
test/fuzztest/formatphonenumber_fuzzer/: BUILD.gn  formatphonenumber_fuzzer.cpp  formatphonenumber_fuzzer.h
test/fuzztest/formatphonenumbertoe164_fuzzer/: BUILD.gn  formatphonenumbertoe164_fuzzer.cpp  formatphonenumbertoe164_fuzzer.h
test/fuzztest/isemergencyphonenumber_fuzzer/: BUILD.gn  isemergencyphonenumber_fuzzer.cpp  isemergencyphonenumber_fuzzer.h
test/fuzztest/makecall_fuzzer/: BUILD.gn  makecall_fuzzer.cpp  makecall_fuzzer.h
test/fuzztest/onremoterequest_fuzzer/: BUILD.gn  onremoterequest_fuzzer.cpp  onremoterequest_fuzzer.h
test/fuzztest/rejectcall_fuzzer/: BUILD.gn  rejectcall_fuzzer.cpp  rejectcall_fuzzer.h
test/fuzztest/setaudiodevice_fuzzer/: BUILD.gn  setaudiodevice_fuzzer.cpp  setaudiodevice_fuzzer.h
test/fuzztest/setcalltransferinfo_fuzzer/: BUILD.gn  setcalltransferinfo_fuzzer.cpp  setcalltransferinfo_fuzzer.h
test/fuzztest/setpausepicture_fuzzer/: BUILD.gn  setpausepicture_fuzzer.cpp  setpausepicture_fuzzer.h
test/fuzztest/startdtmf_fuzzer/: BUILD.gn  startdtmf_fuzzer.cpp  startdtmf_fuzzer.h
test/fuzztest/telephonyinteraction_fuzzer/: BUILD.gn  telephonyinteraction_fuzzer.cpp  telephonyinteraction_fuzzer.h
test/mock/: BUILD.gn  mock_deps_adapter.cpp
test/unittest/: BUILD.gn
test/unittest/antifraud_adapter_test/: BUILD.gn
test/unittest/antifraud_cloud_service_test/: BUILD.gn
test/unittest/antifraud_service_test/: BUILD.gn
test/unittest/call_earthquake_alarm_test/: BUILD.gn
test/unittest/call_manager1_gtest/: BUILD.gn
test/unittest/call_manager2_gtest/: BUILD.gn
test/unittest/call_manager3_gtest/: BUILD.gn
test/unittest/call_manager4_gtest/: BUILD.gn
test/unittest/call_manager5_gtest/: BUILD.gn
test/unittest/call_manager6_gtest/: BUILD.gn
test/unittest/call_manager7_gtest/: BUILD.gn
test/unittest/call_manager8_gtest/: BUILD.gn
test/unittest/call_manager_gtest/: BUILD.gn  call_manager_connect.h  call_manager_gtest.cpp  call_manager_gtest.h  core_service_connect.h
test/unittest/call_manager_service_stub_test/: BUILD.gn
test/unittest/call_manager_service_test/: BUILD.gn
test/unittest/call_manager_special_test/: BUILD.gn
test/unittest/call_manager_zero1_gtest/: BUILD.gn
test/unittest/call_manager_zero2_gtest/: BUILD.gn
test/unittest/call_manager_zero3_gtest/: BUILD.gn
test/unittest/call_manager_zero4_gtest/: BUILD.gn
test/unittest/call_manager_zero5_gtest/: BUILD.gn
test/unittest/call_manager_zero6_gtest/: BUILD.gn
test/unittest/call_manager_zero7_gtest/: BUILD.gn
test/unittest/call_manager_zero8_gtest/: BUILD.gn
test/unittest/call_manager_zero_gtest/: BUILD.gn
test/unittest/call_voice_assistant_test/: BUILD.gn
test/unittest/cellular_call_service/: BUILD.gn  cellular_call_service_test.cpp  cellular_call_service_test.h  cellular_call_stub_test.cpp  cellular_call_stub_test.h
test/unittest/distributed_communication_test/: BUILD.gn
(+637 files in other folders)
