# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/call_manager/call_manager_aafwk.gni")
import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")

ohos_shared_library("tel_call_manager") {
  sources = [
    "services/audio/src/audio_control_manager.cpp",
    "services/audio/src/audio_device_manager.cpp",
    "services/audio/src/audio_player.cpp",
    "services/audio/src/audio_proxy.cpp",
    "services/audio/src/audio_scene_processor.cpp",
    "services/audio/src/audio_state/alerting_state.cpp",
    "services/audio/src/audio_state/bluetooth_device_state.cpp",
    "services/audio/src/audio_state/cs_call_state.cpp",
    "services/audio/src/audio_state/earpiece_device_state.cpp",
    "services/audio/src/audio_state/holding_state.cpp",
    "services/audio/src/audio_state/ims_call_state.cpp",
    "services/audio/src/audio_state/inactive_device_state.cpp",
    "services/audio/src/audio_state/inactive_state.cpp",
    "services/audio/src/audio_state/incoming_state.cpp",
    "services/audio/src/audio_state/ott_call_state.cpp",
    "services/audio/src/audio_state/speaker_device_state.cpp",
    "services/audio/src/audio_state/wired_headset_device_state.cpp",
    "services/audio/src/call_state_processor.cpp",
    "services/audio/src/ring.cpp",
    "services/audio/src/tone.cpp",
    "services/bluetooth/src/bluetooth_call_manager.cpp",
    "services/bluetooth/src/bluetooth_call_policy.cpp",
    "services/bluetooth/src/bluetooth_call_service.cpp",
    "services/bluetooth/src/bluetooth_call_stub.cpp",
    "services/bluetooth/src/bluetooth_connection.cpp",
    "services/call/call_state_observer/src/call_data_base_helper.cpp",
    "services/call/call_state_observer/src/call_records_handler.cpp",
    "services/call/call_state_observer/src/call_records_manager.cpp",
    "services/call/call_state_observer/src/incoming_call_notification.cpp",
    "services/call/call_state_observer/src/incoming_call_wake_up.cpp",
    "services/call/call_state_observer/src/missed_call_notification.cpp",
    "services/call/call_state_observer/src/proximity_sensor.cpp",
    "services/call/call_state_observer/src/reject_call_sms.cpp",
    "services/call/call_state_observer/src/status_bar.cpp",
    "services/call/call_state_observer/src/wired_headset.cpp",
    "services/call/src/call_base.cpp",
    "services/call/src/call_broadcast_subscriber.cpp",
    "services/call/src/call_control_manager.cpp",
    "services/call/src/call_incoming_filter_manager.cpp",
    "services/call/src/call_object_manager.cpp",
    "services/call/src/call_policy.cpp",
    "services/call/src/call_request_handler.cpp",
    "services/call/src/call_request_process.cpp",
    "services/call/src/call_state_listener.cpp",
    "services/call/src/call_status_manager.cpp",
    "services/call/src/call_status_policy.cpp",
    "services/call/src/carrier_call.cpp",
    "services/call/src/conference_base.cpp",
    "services/call/src/cs_call.cpp",
    "services/call/src/cs_conference.cpp",
    "services/call/src/ims_call.cpp",
    "services/call/src/ims_conference.cpp",
    "services/call/src/net_call_base.cpp",
    "services/call/src/ott_call.cpp",
    "services/call/src/ott_call_connection.cpp",
    "services/call/src/ott_conference.cpp",
    "services/call/src/video_call_state.cpp",
    "services/call_manager_service/src/call_manager_dump_helper.cpp",
    "services/call_manager_service/src/call_manager_hisysevent.cpp",
    "services/call_manager_service/src/call_manager_service.cpp",
    "services/call_manager_service/src/call_manager_service_stub.cpp",
    "services/call_report/src/call_ability_callback_proxy.cpp",
    "services/call_report/src/call_ability_report_proxy.cpp",
    "services/call_report/src/call_state_report_proxy.cpp",
    "services/call_setting/src/call_setting_manager.cpp",
    "services/telephony_interaction/src/call_status_callback.cpp",
    "services/telephony_interaction/src/call_status_callback_stub.cpp",
    "services/telephony_interaction/src/cellular_call_connection.cpp",
    "services/telephony_interaction/src/cellular_call_proxy.cpp",
    "services/telephony_interaction/src/core_service_connection.cpp",
    "services/telephony_interaction/src/report_call_info_handler.cpp",
    "services/video/src/video_control_manager.cpp",
    "utils/src/call_number_utils.cpp",
  ]

  include_dirs = [
    "utils/include",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/libphonenumber/cpp/src/phonenumbers",
    "//third_party/protobuf/src",
    "//third_party/protobuf/src/google/protobuf",
    "//base/telephony/call_manager/interfaces/innerkits",
    "//base/telephony/sms_mms/interfaces/innerkits/",
    "services/audio/include",
    "services/audio/include/audio_state",
    "services/video/include",
    "services/bluetooth/include",
    "services/call/include",
    "services/call_manager_service/include",
    "services/call_setting/include",
    "services/telephony_interaction/include",
    "services/call_report/include",
    "services/video/include",
    "services/call/call_state_observer/include",
    "frameworks/native/include",
    "//foundation/multimedia/camera_standard/interfaces/inner_api/native/camera/include",
    "//foundation/multimedia/camera_standard/services/camera_service/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/base/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/client/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/server/include",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/surface",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/common",
    "//drivers/peripheral/camera/interfaces/metadata/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/uhdf2/utils/include",
    "//drivers/hdf_core/adapter/uhdf2/include/hdi",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/camera/interfaces/include",
    "//drivers/peripheral/camera/interfaces/include/server",
    "//drivers/peripheral/camera/interfaces/include/callback/device",
    "//drivers/peripheral/camera/interfaces/include/callback/operator",
    "//drivers/peripheral/camera/interfaces/include/callback/host",
    "${ability_runtime_inner_api_path}/dataobs_manager/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audioringtone/include",
    "//foundation/multimedia/audio_framework/frameworks/native/systemsound",
    "//foundation/multimedia/player_framework/interfaces/inner_api/native",
    "//foundation/multimedia/media_library/interfaces/innerkits/native/include",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [
    "${ability_runtime_inner_api_path}/dataobs_manager:dataobs_manager",
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "${ability_runtime_path}/frameworks/native/ability/native:data_ability_helper",
    "//base/notification/distributed_notification_service/frameworks/ans:ans_innerkits",
    "//base/notification/distributed_notification_service/frameworks/core:ans_core",
    "//base/telephony/core_service/utils:libtel_common",
    "//drivers/peripheral/camera/interfaces/metadata:metadata",
    "//foundation/multimedia/camera_standard/frameworks/native/camera:camera_framework",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:configuration",
    "ability_base:want",
    "ability_base:zuri",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "multimedia_audio_framework:audio_client",
    "multimedia_audio_framework:audio_renderer",
    "multimedia_audio_framework:audio_ringtone_client",
    "power_manager:powermgr_client",
    "relational_store:native_appdatafwk",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [
    "-Wunused",
    "-Wunreachable-code",
    "-fno-exceptions",
    "-fno-rtti",
    "-O2",
    "-flto",
  ]

  ldflags = [ "-flto" ]

  defines += [
    "TELEPHONY_LOG_TAG = \"CallManager\"",
    "LOG_DOMAIN = 0xD001F01",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.communication_bluetooth) &&
      global_parts_info.communication_bluetooth) {
    deps +=
        [ "//foundation/communication/bluetooth/frameworks/inner:btframework" ]
    defines += [ "ABILITY_BLUETOOTH_SUPPORT" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_sms_mms) &&
      global_parts_info.telephony_sms_mms) {
    deps += [ "//base/telephony/sms_mms/frameworks/native:tel_sms_mms_api" ]
    defines += [ "ABILITY_SMS_SUPPORT" ]
  }
  part_name = "call_manager"
  subsystem_name = "telephony"
}
