# Copyright (C) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("tel_call_manager") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  sources = [
    "services/audio/src/audio_control_manager.cpp",
    "services/audio/src/audio_device_manager.cpp",
    "services/audio/src/audio_player.cpp",
    "services/audio/src/audio_proxy.cpp",
    "services/audio/src/audio_scene_processor.cpp",
    "services/audio/src/audio_state/alerting_state.cpp",
    "services/audio/src/audio_state/bluetooth_device_state.cpp",
    "services/audio/src/audio_state/cs_call_state.cpp",
    "services/audio/src/audio_state/dialing_state.cpp",
    "services/audio/src/audio_state/earpiece_device_state.cpp",
    "services/audio/src/audio_state/holding_state.cpp",
    "services/audio/src/audio_state/ims_call_state.cpp",
    "services/audio/src/audio_state/inactive_device_state.cpp",
    "services/audio/src/audio_state/inactive_state.cpp",
    "services/audio/src/audio_state/incoming_state.cpp",
    "services/audio/src/audio_state/ott_call_state.cpp",
    "services/audio/src/audio_state/speaker_device_state.cpp",
    "services/audio/src/audio_state/wired_headset_device_state.cpp",
    "services/audio/src/call_state_processor.cpp",
    "services/audio/src/ring.cpp",
    "services/audio/src/sound.cpp",
    "services/audio/src/tone.cpp",
    "services/bluetooth/src/bluetooth_call_manager.cpp",
    "services/bluetooth/src/bluetooth_call_policy.cpp",
    "services/bluetooth/src/bluetooth_call_service.cpp",
    "services/bluetooth/src/bluetooth_call_stub.cpp",
    "services/bluetooth/src/bluetooth_connection.cpp",
    "services/call/call_state_observer/src/call_data_base_helper.cpp",
    "services/call/call_state_observer/src/call_records_handler.cpp",
    "services/call/call_state_observer/src/call_records_manager.cpp",
    "services/call/call_state_observer/src/incoming_call_notification.cpp",
    "services/call/call_state_observer/src/incoming_call_wake_up.cpp",
    "services/call/call_state_observer/src/missed_call_notification.cpp",
    "services/call/call_state_observer/src/proximity_sensor.cpp",
    "services/call/call_state_observer/src/reject_call_sms.cpp",
    "services/call/call_state_observer/src/status_bar.cpp",
    "services/call/call_state_observer/src/wired_headset.cpp",
    "services/call/src/call_ability_connect_callback.cpp",
    "services/call/src/call_base.cpp",
    "services/call/src/call_broadcast_subscriber.cpp",
    "services/call/src/call_connect_ability.cpp",
    "services/call/src/call_control_manager.cpp",
    "services/call/src/call_incoming_filter_manager.cpp",
    "services/call/src/call_object_manager.cpp",
    "services/call/src/call_policy.cpp",
    "services/call/src/call_request_event_handler_helper.cpp",
    "services/call/src/call_request_handler.cpp",
    "services/call/src/call_request_process.cpp",
    "services/call/src/call_state_listener.cpp",
    "services/call/src/call_status_manager.cpp",
    "services/call/src/call_status_policy.cpp",
    "services/call/src/carrier_call.cpp",
    "services/call/src/conference_base.cpp",
    "services/call/src/cs_call.cpp",
    "services/call/src/cs_conference.cpp",
    "services/call/src/ims_call.cpp",
    "services/call/src/ims_conference.cpp",
    "services/call/src/net_call_base.cpp",
    "services/call/src/ott_call.cpp",
    "services/call/src/ott_call_connection.cpp",
    "services/call/src/ott_conference.cpp",
    "services/call/src/satellite_call.cpp",
    "services/call/src/video_call_state.cpp",
    "services/call/src/voip_call.cpp",
    "services/call_manager_service/src/call_manager_dump_helper.cpp",
    "services/call_manager_service/src/call_manager_hisysevent.cpp",
    "services/call_manager_service/src/call_manager_service.cpp",
    "services/call_manager_service/src/call_manager_service_stub.cpp",
    "services/call_report/src/app_state_observer.cpp",
    "services/call_report/src/call_ability_callback_proxy.cpp",
    "services/call_report/src/call_ability_report_proxy.cpp",
    "services/call_report/src/call_state_report_proxy.cpp",
    "services/call_setting/src/call_setting_manager.cpp",
    "services/distributed_call/src/distributed_call_manager.cpp",
    "services/distributed_call/src/distributed_call_proxy.cpp",
    "services/telephony_interaction/src/call_status_callback.cpp",
    "services/telephony_interaction/src/call_status_callback_stub.cpp",
    "services/telephony_interaction/src/cellular_call_connection.cpp",
    "services/telephony_interaction/src/core_service_connection.cpp",
    "services/telephony_interaction/src/report_call_info_handler.cpp",
    "services/telephony_interaction/src/voip_call_connection.cpp",
    "services/video/src/video_control_manager.cpp",
    "utils/src/call_ability_connection.cpp",
    "utils/src/call_dialog.cpp",
    "utils/src/call_number_utils.cpp",
    "utils/src/settings_datashare_helper.cpp",
  ]

  include_dirs = [
    "utils/include",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/libphonenumber/cpp/src/phonenumbers",
    "//third_party/protobuf/src",
    "services/audio/include",
    "services/audio/include/audio_state",
    "services/video/include",
    "services/bluetooth/include",
    "services/distributed_call/include",
    "services/distributed_call/include/dcall",
    "services/call/include",
    "services/call_manager_service/include",
    "services/call_setting/include",
    "services/telephony_interaction/include",
    "services/call_report/include",
    "services/video/include",
    "services/call/call_state_observer/include",
  ]

  deps = [
    "frameworks/native:tel_call_manager_api",
    "//third_party/cJSON:cjson",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_deps_wrapper",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "ability_runtime:extension_manager",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "audio_framework:audio_toneplayer",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_consumer",
    "distributed_notification_service:ans_innerkits",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "os_account:os_account_innerkits",
    "player_framework:system_sound_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [
    "-Wunused",
    "-Wunreachable-code",
    "-fno-exceptions",
    "-fno-rtti",
    "-fstack-protector-all",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-flto",
    "-Wno-unused-but-set-variable",
  ]

  ldflags = [ "-flto" ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManager\"",
    "LOG_DOMAIN = 0xD001F10",
  ]

  if (defined(global_parts_info) &&
      defined(global_parts_info.communication_bluetooth) &&
      global_parts_info.communication_bluetooth) {
    external_deps += [ "bluetooth:btframework" ]
    defines += [ "ABILITY_BLUETOOTH_SUPPORT" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_sms_mms) &&
      global_parts_info.telephony_sms_mms) {
    external_deps += [ "sms_mms:tel_sms_mms_api" ]
    defines += [ "ABILITY_SMS_SUPPORT" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_cellular_call) &&
      global_parts_info.telephony_cellular_call) {
    defines += [ "ABILITY_CELLULAR_SUPPORT" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.powermgr_power_manager) &&
      global_parts_info.powermgr_power_manager) {
    external_deps += [ "power_manager:powermgr_client" ]
    defines += [ "ABILITY_POWER_SUPPORT" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.sensors_miscdevice) &&
      global_parts_info.sensors_miscdevice) {
    external_deps += [ "miscdevice:vibrator_interface_native" ]
    defines += [ "SUPPORT_VIBRATOR" ]
  }

  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_cellular_data) &&
      global_parts_info.telephony_cellular_data) {
    external_deps += [ "cellular_data:tel_cellular_data_api" ]
    defines += [ "CELLULAR_DATA_SUPPORT" ]
  }

  part_name = "call_manager"
  subsystem_name = "telephony"
}
