# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("call_manager_js_config") {
  include_dirs = [ "napi/include" ]
}

ohos_shared_library("call") {
  sources = [
    "napi/src/napi_call_ability_callback.cpp",
    "napi/src/napi_call_manager.cpp",
    "napi/src/napi_call_manager_callback.cpp",
    "napi/src/napi_call_manager_utils.cpp",
  ]

  public_configs = [ ":call_manager_js_config" ]

  deps = [ "//third_party/libuv:uv" ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "init:libbegetutil",
    "napi:ace_napi",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerJsApi\"",
    "LOG_DOMAIN = 0xD001F01",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "call_manager"
  subsystem_name = "telephony"
  relative_install_dir = "module/telephony"
}
