# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony"

config("call_manager_config") {
  include_dirs = [
    "$SUBSYSTEM_DIR/call_manager/frameworks/native/include",
    "$SUBSYSTEM_DIR/call_manager/interfaces/innerkits",
    "$SUBSYSTEM_DIR/call_manager/utils/include",
  ]
}

ohos_shared_library("tel_call_manager_api") {
  sources = [
    "src/bluetooth_call_client.cpp",
    "src/bluetooth_call_proxy.cpp",
    "src/call_ability_callback.cpp",
    "src/call_ability_callback_stub.cpp",
    "src/call_manager_client.cpp",
    "src/call_manager_proxy.cpp",
    "src/call_manager_service_proxy.cpp",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  public_configs = [ ":call_manager_config" ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "ability_base:want",
    "core_service:tel_core_service_api",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManagerApi\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "call_manager"
  subsystem_name = "telephony"
  relative_install_dir = "module"
}
