# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony"
CALL_MANAGER_API_DIR = "$SUBSYSTEM_DIR/call_manager/interfaces/kits"
ohos_shared_library("tel_call_manager_api") {
  sources = [
    "$CALL_MANAGER_API_DIR/src/call_manager.cpp",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/call_manager/proxy/call_manager_service_proxy.cpp",
  ]

  include_dirs = [
    "$CALL_MANAGER_API_DIR/include",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/call_manager/common",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/call_manager/proxy",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/cellular_call/common",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/cellular_call/proxy",
    "$SUBSYSTEM_DIR/ril_adapter/interfaces/innerkits",
    "$SUBSYSTEM_DIR/call_manager/utils/include",
  ]

  deps = [
    "$SUBSYSTEM_DIR/call_manager:tel_call_manager",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "call_manager"
  subsystem_name = "telephony"
}
