# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony"
ohos_shared_library("call") {
  include_dirs = [
    "//third_party/node/src",
    "js/napi/include",
    "native/include",
    "//utils/native/base/include",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/call_manager/common",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/call_manager/proxy",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/cellular_call/common",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/cellular_call/proxy",
  ]

  sources = [
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/call_manager/proxy/call_manager_service_proxy.cpp",
    "js/napi/src/napi_call_ability_callback.cpp",
    "js/napi/src/napi_call_ability_handler.cpp",
    "js/napi/src/napi_call_manager.cpp",
    "native/src/call_ability_callback.cpp",
    "native/src/call_ability_callback_stub.cpp",
    "native/src/call_manager_proxy.cpp",
  ]

  deps = [
    "$SUBSYSTEM_DIR/core_service/common:libtelephony_common",
    "//foundation/ace/napi:ace_napi",
    "//third_party/libuv:uv_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CallManager\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "call_manager"
  subsystem_name = "telephony"
  relative_install_dir = "module/telephony"
}
